// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All Pages 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <h1
        className="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
      >
        HTML Encoder
      </h1>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <textarea
        onChange={[Function]}
        placeholder="Decoded HTML"
        style={
          Object {
            "minHeight": 160,
            "width": "100%",
          }
        }
        value="Example: < > \\" \\\\\\\\' &"
      />
    </div>
    <hr
      className="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <textarea
        onChange={[Function]}
        placeholder="Encoded HTML"
        style={
          Object {
            "minHeight": 160,
            "width": "100%",
          }
        }
        value="Example: &lt; &gt; &quot; \\\\\\\\&apos; &amp;"
      />
    </div>
  </div>
</div>
`;

exports[`All Pages 2`] = `
Object {
  "baseTag": Array [],
  "bodyAttributes": Object {},
  "defer": true,
  "encode": true,
  "htmlAttributes": Object {},
  "linkTags": Array [],
  "metaTags": Array [
    Object {
      "content": "Encode or decode HTML into text.",
      "name": "description",
    },
    Object {
      "content": "HTML Encoder, HTML Decoder, encoding HTML, decoding HTML",
      "name": "keywords",
    },
  ],
  "noscriptTags": Array [],
  "onChangeClientState": [Function],
  "scriptTags": Array [],
  "styleTags": Array [],
  "title": "HTML Encoder",
  "titleAttributes": Object {},
}
`;

exports[`All Pages 3`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <h1
        className="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
      >
        URL Encoder
      </h1>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <textarea
        onChange={[Function]}
        placeholder="Encoded URL"
        style={
          Object {
            "minHeight": 160,
            "width": "100%",
          }
        }
        value="https://devkits.net/json=%7B%0A%20%20%22user%22:%20%7B%0A%20%20%20%20%22id%22:%201,%0A%20%20%20%20%22name%22:%20%22devkits%22%0A%20%20%7D%0A%7D%0A"
      />
    </div>
    <hr
      className="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <textarea
        onChange={[Function]}
        placeholder="Decoded URL"
        style={
          Object {
            "minHeight": 160,
            "width": "100%",
          }
        }
        value="https://devkits.net/json={
  \\"user\\": {
    \\"id\\": 1,
    \\"name\\": \\"devkits\\"
  }
}
"
      />
    </div>
  </div>
</div>
`;

exports[`All Pages 4`] = `
Object {
  "baseTag": Array [],
  "bodyAttributes": Object {},
  "defer": true,
  "encode": true,
  "htmlAttributes": Object {},
  "linkTags": Array [],
  "metaTags": Array [
    Object {
      "content": "Encode or decode HTML into text.",
      "name": "description",
    },
    Object {
      "content": "URL Encoder, URL Decoder, encoding URL, decoding URL",
      "name": "keywords",
    },
  ],
  "noscriptTags": Array [],
  "onChangeClientState": [Function],
  "scriptTags": Array [],
  "styleTags": Array [],
  "title": "URL Encoder",
  "titleAttributes": Object {},
}
`;

exports[`All Pages 5`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <h1
        className="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
      >
        Unix Timestamp Converter
      </h1>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled css-1sumxir-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={true}
          htmlFor=":r0:"
          id=":r0:-label"
        >
          Timestamp
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":r0:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="number"
            value={946684800}
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1in441m"
            >
              <span>
                Timestamp
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled css-1sumxir-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={true}
          htmlFor=":r1:"
          id=":r1:-label"
        >
          Year
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":r1:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="number"
            value={2000}
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1in441m"
            >
              <span>
                Year
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled css-1sumxir-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={true}
          htmlFor=":r2:"
          id=":r2:-label"
        >
          Month
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":r2:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="number"
            value={1}
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1in441m"
            >
              <span>
                Month
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled css-1sumxir-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={true}
          htmlFor=":r3:"
          id=":r3:-label"
        >
          Day
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":r3:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="number"
            value={1}
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1in441m"
            >
              <span>
                Day
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled css-1sumxir-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={true}
          htmlFor=":r4:"
          id=":r4:-label"
        >
          Hour
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":r4:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="number"
            value={0}
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1in441m"
            >
              <span>
                Hour
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled css-1sumxir-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={true}
          htmlFor=":r5:"
          id=":r5:-label"
        >
          Minute
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":r5:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="number"
            value={0}
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1in441m"
            >
              <span>
                Minute
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled css-1sumxir-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={true}
          htmlFor=":r6:"
          id=":r6:-label"
        >
          Second
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":r6:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="number"
            value={0}
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1in441m"
            >
              <span>
                Second
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`All Pages 6`] = `
Object {
  "baseTag": Array [],
  "bodyAttributes": Object {},
  "defer": true,
  "encode": true,
  "htmlAttributes": Object {},
  "linkTags": Array [],
  "metaTags": Array [
    Object {
      "content": "Unix timestamp and date time converter",
      "name": "description",
    },
    Object {
      "content": "timestamp, epoch, converter",
      "name": "keywords",
    },
  ],
  "noscriptTags": Array [],
  "onChangeClientState": [Function],
  "scriptTags": Array [],
  "styleTags": Array [],
  "title": "Unix Timestamp Converter",
  "titleAttributes": Object {},
}
`;

exports[`All Pages 7`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <h1
        className="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
      >
        Case Type Converter
      </h1>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={false}
          htmlFor=":r7:"
          id=":r7:-label"
        >
          Normal Text
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-md26zr-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":r7:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="This is an example text"
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1ftyaf0"
            >
              <span>
                Normal Text
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={false}
          htmlFor=":r8:"
          id=":r8:-label"
        >
          Camel Case
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-md26zr-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":r8:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="thisIsAnExampleText"
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1ftyaf0"
            >
              <span>
                Camel Case
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={false}
          htmlFor=":r9:"
          id=":r9:-label"
        >
          Snake Case
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-md26zr-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":r9:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="this_is_an_example_text"
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1ftyaf0"
            >
              <span>
                Snake Case
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={false}
          htmlFor=":ra:"
          id=":ra:-label"
        >
          Snake Upper Case
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-md26zr-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":ra:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="THIS_IS_AN_EXAMPLE_TEXT"
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1ftyaf0"
            >
              <span>
                Snake Upper Case
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink={false}
          htmlFor=":rb:"
          id=":rb:-label"
        >
          Kebab Case
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-md26zr-MuiInputBase-root-MuiOutlinedInput-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            disabled={false}
            id=":rb:"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="this-is-an-example-text"
          />
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-1ftyaf0"
            >
              <span>
                Kebab Case
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`All Pages 8`] = `
Object {
  "baseTag": Array [],
  "bodyAttributes": Object {},
  "defer": true,
  "encode": true,
  "htmlAttributes": Object {},
  "linkTags": Array [],
  "metaTags": Array [
    Object {
      "content": "Convert text into different case types",
      "name": "description",
    },
    Object {
      "content": "Normal Text, Camel Case, Snake Case, Snake Upper Case, Kebab Case",
      "name": "keywords",
    },
  ],
  "noscriptTags": Array [],
  "onChangeClientState": [Function],
  "scriptTags": Array [],
  "styleTags": Array [],
  "title": "Case Type Converter",
  "titleAttributes": Object {},
}
`;

exports[`All Pages 9`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <h1
        className="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
      >
        CSV Editor
      </h1>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded css-1kw2pi7-MuiPaper-root"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="presentation"
        tabIndex={0}
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-ks12vm-MuiGrid-root"
        >
          <input
            multiple={true}
            onChange={[Function]}
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            tabIndex={-1}
            type="file"
          />
          <p>
            Drag and drop a CSV file
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <textarea
        onChange={[Function]}
        placeholder="CSV"
        style={
          Object {
            "minHeight": 160,
            "width": "100%",
          }
        }
        value="Column 1,Column 2,Column 3,Column 4,Column 5,Column 6,Column 7,Column 8,Column 9,Column 10
Value 1,Value 2,Value 3,Value 4,Value 5,Value 6,Value 7,Value 8,Value 9,Value 10
Value 11,Value 12,Value 13,Value 14,Value 15,Value 16,Value 17,Value 18,Value 19,Value 20
Value 21,Value 22,Value 23,Value 24,Value 25,Value 26,Value 27,Value 28,Value 29,Value 30
Value 31,Value 32,Value 33,Value 34,Value 35,Value 36,Value 37,Value 38,Value 39,Value 40
Value 41,Value 42,Value 43,Value 44,Value 45,Value 46,Value 47,Value 48,Value 49,Value 50
Value 51,Value 52,Value 53,Value 54,Value 55,Value 56,Value 57,Value 58,Value 59,Value 60
Value 61,Value 62,Value 63,Value 64,Value 65,Value 66,Value 67,Value 68,Value 69,Value 70
Value 71,Value 72,Value 73,Value 74,Value 75,Value 76,Value 77,Value 78,Value 79,Value 80
Value 81,Value 82,Value 83,Value 84,Value 85,Value 86,Value 87,Value 88,Value 89,Value 90
Value 91,Value 92,Value 93,Value 94,Value 95,Value 96,Value 97,Value 98,Value 99,Value 100"
      />
    </div>
    <hr
      className="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="Spreadsheet"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseMove={[Function]}
      >
        <table
          className="Spreadsheet__table"
        >
          <colgroup>
            <col />
            <col />
            <col />
            <col />
            <col />
            <col />
            <col />
            <col />
            <col />
            <col />
            <col />
          </colgroup>
          <tbody>
            <tr>
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              />
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                A
              </th>
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                B
              </th>
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                C
              </th>
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                D
              </th>
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                E
              </th>
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                F
              </th>
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                G
              </th>
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                H
              </th>
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                I
              </th>
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                J
              </th>
            </tr>
            <tr
              row={0}
            >
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                1
              </th>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Column 1
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Column 2
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Column 3
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Column 4
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Column 5
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Column 6
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Column 7
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Column 8
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Column 9
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Column 10
                </span>
              </td>
            </tr>
            <tr
              row={1}
            >
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                2
              </th>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 1
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 2
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 3
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 4
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 5
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 6
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 7
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 8
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 9
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 10
                </span>
              </td>
            </tr>
            <tr
              row={2}
            >
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                3
              </th>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 11
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 12
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 13
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 14
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 15
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 16
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 17
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 18
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 19
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 20
                </span>
              </td>
            </tr>
            <tr
              row={3}
            >
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                4
              </th>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 21
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 22
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 23
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 24
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 25
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 26
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 27
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 28
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 29
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 30
                </span>
              </td>
            </tr>
            <tr
              row={4}
            >
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                5
              </th>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 31
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 32
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 33
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 34
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 35
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 36
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 37
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 38
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 39
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 40
                </span>
              </td>
            </tr>
            <tr
              row={5}
            >
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                6
              </th>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 41
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 42
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 43
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 44
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 45
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 46
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 47
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 48
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 49
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 50
                </span>
              </td>
            </tr>
            <tr
              row={6}
            >
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                7
              </th>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 51
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 52
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 53
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 54
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 55
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 56
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 57
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 58
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 59
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 60
                </span>
              </td>
            </tr>
            <tr
              row={7}
            >
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                8
              </th>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 61
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 62
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 63
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 64
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 65
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 66
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 67
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 68
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 69
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 70
                </span>
              </td>
            </tr>
            <tr
              row={8}
            >
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                9
              </th>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 71
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 72
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 73
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 74
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 75
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 76
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 77
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 78
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 79
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 80
                </span>
              </td>
            </tr>
            <tr
              row={9}
            >
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                10
              </th>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 81
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 82
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 83
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 84
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 85
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 86
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 87
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 88
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 89
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 90
                </span>
              </td>
            </tr>
            <tr
              row={10}
            >
              <th
                className="Spreadsheet__header"
                onClick={[Function]}
                tabIndex={0}
              >
                11
              </th>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 91
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 92
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 93
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 94
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 95
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 96
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 97
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 98
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 99
                </span>
              </td>
              <td
                className="Spreadsheet__cell"
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                tabIndex={0}
              >
                <span
                  className="Spreadsheet__data-viewer"
                >
                  Value 100
                </span>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          className="Spreadsheet__floating-rect Spreadsheet__floating-rect--selected Spreadsheet__floating-rect--hidden"
          style={
            Object {
              "height": undefined,
              "left": undefined,
              "top": undefined,
              "width": undefined,
            }
          }
        />
        <div
          className="Spreadsheet__floating-rect Spreadsheet__floating-rect--copied Spreadsheet__floating-rect--hidden"
          style={
            Object {
              "height": undefined,
              "left": undefined,
              "top": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        Download
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`All Pages 10`] = `
Object {
  "baseTag": Array [],
  "bodyAttributes": Object {},
  "defer": true,
  "encode": true,
  "htmlAttributes": Object {},
  "linkTags": Array [],
  "metaTags": Array [
    Object {
      "content": "Live preview and edit csv file",
      "name": "description",
    },
    Object {
      "content": "csv, editor, edit, preview, live editor",
      "name": "keywords",
    },
  ],
  "noscriptTags": Array [],
  "onChangeClientState": [Function],
  "scriptTags": Array [],
  "styleTags": Array [],
  "title": "CSV Editor",
  "titleAttributes": Object {},
}
`;

exports[`All Pages 11`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <h1
        className="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
      >
        Devkits
      </h1>
    </div>
  </div>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    data-testid="HomeIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</div>
`;

exports[`All Pages 12`] = `
Object {
  "baseTag": Array [],
  "bodyAttributes": Object {},
  "defer": true,
  "encode": true,
  "htmlAttributes": Object {},
  "linkTags": Array [],
  "metaTags": Array [
    Object {
      "content": "Collection of development tools",
      "name": "description",
    },
    Object {
      "content": "web, web development, development, development tools, devkits",
      "name": "keywords",
    },
  ],
  "noscriptTags": Array [],
  "onChangeClientState": [Function],
  "scriptTags": Array [],
  "styleTags": Array [],
  "title": "Devkits",
  "titleAttributes": Object {},
}
`;
